apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
              readOnly: false
            - name: media-smb
              mountPath: /media-smb
              readOnly: false
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 4Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: media-smb
          persistentVolumeClaim:
            claimName: jellyfin-media-smb
